# ggb_python

./: .gitignore  README.md  examine_elstat_file.ipynb  pyproject.toml
data/: NACE_ANATH_2.1_GR.xlsx  smrt_manuf_projects_two_digit_activity.csv
notebooks/: examine_elstat_file.ipynb  preproc_transform_data.ipynb
smart_manufacturing/data/: Correspondence-table-2024-NUTS-SR-EN-DE-FR.xlsx  EconActiv_nace_2_gr.xls  rrf_smrt_manuf_funded_proposals_official_data.xlsx  smrt_manuf_projects_two_digit_activity.csv
smart_manufacturing/notebooks/: df_totals.html  examine_elstat_file.ipynb  examine_official_guide_tables.ipynb  parse_nace_codes.py  parse_official_pdf_tables.ipynb  preproc_transform_data.ipynb  smrt_manuf_serctor_analysis.ipynb
smart_manufacturing/plots/: df_totals.html
smart_manufacturing/smart_manuf_docs/: EconActiv_nace2_help_gr.doc
smart_manufacturing/utils/: translations.py
