[project]
name = "ggb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=24.10.0",
    "jupyterlab>=4.3.2",
    "matplotlib>=3.9.3",
    "openpyxl>=3.1.2",
    "pandas>=2.2.2",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.2",
    "taipy>=4",
    "xlrd>=2.0.1",
]
